# metrics-exporter-opentelemetry

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  deny.toml  flake.nix  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: CI.yaml  Release.yaml
nix/: devshell.nix
src/: error.rs  lib.rs  recorder.rs
