# 🐻‍❄️🎈 metrics-exporter-opentelemetry: metrics exporter over OpenTelemetry
# Copyright (c) 2025 Noelware, LLC. <team@noelware.org>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "metrics-exporter-opentelemetry"
description = "🐻‍❄️🎈 A `metrics` exporter over OpenTelemetry"
version = "0.1.2"
repository = "https://github.com/Noelware/metrics-exporter-opentelemetry"
license = "MIT"
edition = "2021"
rust-version = "1.75"
authors = ["Noel Towa <cutie@floofy.dev>"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(noeldoc)'] }

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "from"] }
metrics = "0.24.1"
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "metrics",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "metrics",
] }

[dev-dependencies]
opentelemetry-stdout = { version = "0.31.0", default-features = false, features = [
    "metrics",
] }
